err/elastic-git.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/elastic_git-1.5.0.egg-info'...
Listing './lib/python3.5/site-packages/elasticgit'...
Listing './lib/python3.5/site-packages/elasticgit/commands'...
Compiling './lib/python3.5/site-packages/elasticgit/commands/avro.py'...
***   File "./lib/python3.5/site-packages/elasticgit/commands/avro.py", line 64
    exec model_code in scope
                  ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/elasticgit/commands/shell.py'...
***   File "./lib/python3.5/site-packages/elasticgit/commands/shell.py", line 87
    print '%s does not look like a models module.' % (models,)
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/elasticgit/commands/tests'...
Compiling './lib/python3.5/site-packages/elasticgit/search.py'...
***   File "./lib/python3.5/site-packages/elasticgit/search.py", line 238
    lambda (ip, r): index_name(ip, r.active_branch_name()),
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/elasticgit/storage'...
Compiling './lib/python3.5/site-packages/elasticgit/storage/local.py'...
***   File "./lib/python3.5/site-packages/elasticgit/storage/local.py", line 127
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/elasticgit/storage/remote.py'...
***   File "./lib/python3.5/site-packages/elasticgit/storage/remote.py", line 96
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/elasticgit/templates'...
Listing './lib/python3.5/site-packages/elasticgit/tests'...
Compiling './lib/python3.5/site-packages/elasticgit/tests/base.py'...
***   File "./lib/python3.5/site-packages/elasticgit/tests/base.py", line 162
    exec code_string in scope
                   ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/basic_usage.py'...
***   File "./lib/python3.5/site-packages/examples/basic_usage.py", line 26
    print person.uuid, person.name, person.age
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
